--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.555.0",
     "mysql2": "^3.15.3",
     "next": "16.0.5",
